--- a/k8s/configs/deployment.yaml.tmpl
+++ b/k8s/configs/deployment.yaml.tmpl
@@ -1,40 +1,10 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-service
-spec:
-  selector:
-    app: nginx
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
-  type: LoadBalancer
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: nginx-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-spec:
-  rules:
-  - http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: nginx-service
-            port:
-              number: 80
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: task3-nginx-deployment
+  name: nginx-deployment
+  namespace: cs4296-project
 spec:
-  replicas: 10
+  replicas: %POD_COUNT%
   selector:
     matchLabels:
       app: nginx
